--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "lucide-react": "^0.522.0",
     "next": "15.4.1",
     "next-intl": "^3.26.3",
+    "page-flip": "^2.0.7",
+    "pdfjs-dist": "^4.10.38",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icon": "^1.0.0",
@@ -34,6 +36,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/page-flip": "^2.0.4",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
