--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
     }
   },
   "typeRoots": ["./src/types", "./node_modules/@types"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/utils/utils.js"],
   "exclude": ["node_modules"]
 }
