--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.19",
+    "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.8.1",
