--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
-    "@tiptap/extension-placeholder": "^3.0.7",
-    "@tiptap/react": "^3.0.7",
-    "@tiptap/starter-kit": "^3.0.7",
+    "@tiptap/extension-image": "^3.10.5",
+    "@tiptap/extension-link": "^3.10.5",
+    "@tiptap/extension-placeholder": "^3.10.5",
+    "@tiptap/extension-text-align": "^3.10.5",
+    "@tiptap/extension-underline": "^3.10.5",
+    "@tiptap/react": "^3.10.5",
+    "@tiptap/starter-kit": "^3.10.5",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.19",
