--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tiptap/extension-underline": "^3.10.5",
     "@tiptap/react": "^3.10.5",
     "@tiptap/starter-kit": "^3.10.5",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.19",
