--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@opennextjs/cloudflare": "^1.14.7",
     "@tiptap/extension-image": "^3.10.5",
     "@tiptap/extension-link": "^3.10.5",
     "@tiptap/extension-placeholder": "^3.10.5",
