--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy:prepare": "node scripts/deploy.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -20,8 +21,10 @@
     "@tiptap/starter-kit": "^3.10.5",
     "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.10.0",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.19",
+    "dotenv": "^17.2.3",
     "embla-carousel-auto-scroll": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
